# MAI-tablets

./: .gitignore  Dockerfile  README.md  Test-file.txt  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4e8202bba562_add_created_at_fix_types_utc.py  88bd0466d6f4_sync_models_and_db.py  926976c412a4_add_updated_at_to_medications_and_.py  e2f8bbdc4b28_initial_full_migration.py  fd3b8eecbb06_add_created_at_fix_types_utc.py
app/: main.py
app/auth/: ERADME.md
app/auth/api/: auth.py  friend.py
app/auth/core/: config.py  security.py
app/auth/crud/: friend.py  invitation.py  user.py
app/auth/db/: session.py
app/auth/models/: invitation.py  user.py
app/auth/schemas/: auth.py  friend.py
app/core/: scheduler.py  security.py
app/db/: base.py  session.py
app/medicines/api/: sync.py  (+2 more)
auth_service/: README.md  example.jsonс  main.py  project.tree  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 2025_10_18_1955-703edafcc08b_создание_таблиц.py  2025_10_19_1607-431e5474cc1d_убрана_user_role.py  2025_10_19_1746-12c73889ab37_добавна_таблица_связей.py
auth_service/app/api/: auth.py  friend.py  users.py
auth_service/app/core/: config.py  security.py
auth_service/app/crud/: user.py
auth_service/app/db/: session.py
auth_service/app/models/: __init__.py  base.py  db_helper.py  user.py  user_relation.py  users.py
auth_service/app/schemas/: auth.py  friend.py
auth_service/app/services/: user_service.py
patients_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
patients_service/alembic/: env.py
patients_service/app/: main.py  models.py  schemas.py
patients_service/app/api/: patients.py
patients_service/app/core/: config.py  db.py
(+8 files in other folders)
