[tool.poetry]
name = "medical-reminder-service"
version = "0.1.0"
description = "Microservice for managing patients and medications"
authors = ["Александр Македонский <asmakedonskij@mai.education>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pydantic = ">=2.0"
python-dotenv = "^1.1.1"
aiofiles = "^24.1.0"
pydantic-settings = "^2.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]
